<?xml version="1.0" encoding="utf-8"?><!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_picker_rgb_base_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="1000dp"
        android:layout_height="1dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_color_rgb_textview_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/color_red"
            android:textColor="@color/pdfPaint_color_picker_rgb_red" />

        <SeekBar
            android:id="@+id/color_picker_color_rgb_seekbar_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4.5"
            android:max="255" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_rgb_red_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="255"
            android:textColor="?attr/colorAccent"
            tools:ignore="HardcodedText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_color_rgb_textview_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/color_green"
            android:textColor="@color/pdfPaint_color_picker_rgb_green" />

        <SeekBar
            android:id="@+id/color_picker_color_rgb_seekbar_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4.5"
            android:max="255" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_rgb_green_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="255"
            android:textColor="?attr/colorAccent"
            tools:ignore="HardcodedText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_color_rgb_textview_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/color_blue"
            android:textColor="@color/pdfPaint_color_picker_rgb_blue" />

        <SeekBar
            android:id="@+id/color_picker_color_rgb_seekbar_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4.5"
            android:max="255" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_rgb_blue_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="255"
            android:textColor="?attr/colorAccent"
            tools:ignore="HardcodedText" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/color_picker_alpha_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_color_rgb_textview_alpha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/color_alpha"
            android:textColor="@color/pdfPaint_color_picker_hex_black" />

        <SeekBar
            android:id="@+id/color_picker_color_rgb_seekbar_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:max="255" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/color_picker_rgb_alpha_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:text="100"
                android:textColor="?attr/colorAccent"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="%"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorAccent"
                tools:ignore="HardcodedText" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_picker_color_rgb_textview_hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/color_hex"
            android:textColor="@color/pdfPaint_color_picker_hex_black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/color_picker_color_rgb_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="#"
            android:inputType="textNoSuggestions"
            android:maxLength="18"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

</LinearLayout>
